; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/extr_kvaser_pciefd.c_kvaser_pciefd_handle_error_packet.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/extr_kvaser_pciefd.c_kvaser_pciefd_handle_error_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvaser_pciefd = type { i64, %struct.kvaser_pciefd_can** }
%struct.kvaser_pciefd_can = type { i64, i32 }
%struct.kvaser_pciefd_rx_packet = type { i32* }

@KVASER_PCIEFD_PACKET_CHID_SHIFT = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@KVASER_PCIEFD_MAX_ERR_REP = common dso_local global i64 0, align 8
@KVASER_PCIEFD_BEC_POLL_FREQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvaser_pciefd*, %struct.kvaser_pciefd_rx_packet*)* @kvaser_pciefd_handle_error_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kvaser_pciefd_handle_error_packet(%struct.kvaser_pciefd* %0, %struct.kvaser_pciefd_rx_packet* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kvaser_pciefd*, align 8
  %5 = alloca %struct.kvaser_pciefd_rx_packet*, align 8
  %6 = alloca %struct.kvaser_pciefd_can*, align 8
  %7 = alloca i64, align 8
  store %struct.kvaser_pciefd* %0, %struct.kvaser_pciefd** %4, align 8
  store %struct.kvaser_pciefd_rx_packet* %1, %struct.kvaser_pciefd_rx_packet** %5, align 8
  %8 = load %struct.kvaser_pciefd_rx_packet*, %struct.kvaser_pciefd_rx_packet** %5, align 8
  %9 = getelementptr inbounds %struct.kvaser_pciefd_rx_packet, %struct.kvaser_pciefd_rx_packet* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @KVASER_PCIEFD_PACKET_CHID_SHIFT, align 4
  %14 = ashr i32 %12, %13
  %15 = and i32 %14, 7
  %16 = sext i32 %15 to i64
  store i64 %16, i64* %7, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load %struct.kvaser_pciefd*, %struct.kvaser_pciefd** %4, align 8
  %19 = getelementptr inbounds %struct.kvaser_pciefd, %struct.kvaser_pciefd* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp uge i64 %17, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = load i32, i32* @EIO, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %3, align 4
  br label %48

25:                                               ; preds = %2
  %26 = load %struct.kvaser_pciefd*, %struct.kvaser_pciefd** %4, align 8
  %27 = getelementptr inbounds %struct.kvaser_pciefd, %struct.kvaser_pciefd* %26, i32 0, i32 1
  %28 = load %struct.kvaser_pciefd_can**, %struct.kvaser_pciefd_can*** %27, align 8
  %29 = load i64, i64* %7, align 8
  %30 = getelementptr inbounds %struct.kvaser_pciefd_can*, %struct.kvaser_pciefd_can** %28, i64 %29
  %31 = load %struct.kvaser_pciefd_can*, %struct.kvaser_pciefd_can** %30, align 8
  store %struct.kvaser_pciefd_can* %31, %struct.kvaser_pciefd_can** %6, align 8
  %32 = load %struct.kvaser_pciefd_can*, %struct.kvaser_pciefd_can** %6, align 8
  %33 = load %struct.kvaser_pciefd_rx_packet*, %struct.kvaser_pciefd_rx_packet** %5, align 8
  %34 = call i32 @kvaser_pciefd_rx_error_frame(%struct.kvaser_pciefd_can* %32, %struct.kvaser_pciefd_rx_packet* %33)
  %35 = load %struct.kvaser_pciefd_can*, %struct.kvaser_pciefd_can** %6, align 8
  %36 = getelementptr inbounds %struct.kvaser_pciefd_can, %struct.kvaser_pciefd_can* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @KVASER_PCIEFD_MAX_ERR_REP, align 8
  %39 = icmp sge i64 %37, %38
  br i1 %39, label %40, label %43

40:                                               ; preds = %25
  %41 = load %struct.kvaser_pciefd_can*, %struct.kvaser_pciefd_can** %6, align 8
  %42 = call i32 @kvaser_pciefd_disable_err_gen(%struct.kvaser_pciefd_can* %41)
  br label %43

43:                                               ; preds = %40, %25
  %44 = load %struct.kvaser_pciefd_can*, %struct.kvaser_pciefd_can** %6, align 8
  %45 = getelementptr inbounds %struct.kvaser_pciefd_can, %struct.kvaser_pciefd_can* %44, i32 0, i32 1
  %46 = load i32, i32* @KVASER_PCIEFD_BEC_POLL_FREQ, align 4
  %47 = call i32 @mod_timer(i32* %45, i32 %46)
  store i32 0, i32* %3, align 4
  br label %48

48:                                               ; preds = %43, %22
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i32 @kvaser_pciefd_rx_error_frame(%struct.kvaser_pciefd_can*, %struct.kvaser_pciefd_rx_packet*) #1

declare dso_local i32 @kvaser_pciefd_disable_err_gen(%struct.kvaser_pciefd_can*) #1

declare dso_local i32 @mod_timer(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
